--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <nav class="pag">
             <ul class="pagination">
               <li id="Previous" class="page-item disabled">
-                <a class="page-link">Previous</a>
+                <a class="page-link" href="#">Previous</a>
               </li>
               <li id="Next" class="page-item">
                 <a class="page-link" href="#">Next</a>
